--- a/project/.env.example
+++ b/project/.env.example
@@ -1,10 +1,18 @@
 # PocketSIEM Environment Configuration
 
 # Backend API Configuration
-# For local development, use your computer's IP address (not localhost)
-# Get your IP: `ipconfig` (Windows) or `ifconfig` (Mac/Linux)
-# Example: http://192.168.1.100:8080/api/v1
-EXPO_PUBLIC_API_BASE_URL=http://localhost:8080/api/v1
+# ⚠️ IMPORTANT: For APK builds, DO NOT use localhost - it will NOT work!
+# Get your computer's IP address:
+#   Linux/Mac: hostname -I | awk '{print $1}'
+#   Windows: ipconfig (look for IPv4 Address)
+
+# DEVELOPMENT (Expo Go on same network):
+# Replace with your computer's actual local IP address
+# Example: http://10.64.243.196:8080/api/v1 or http://192.168.1.100:8080/api/v1
+EXPO_PUBLIC_API_BASE_URL=http://10.64.243.196:8080/api/v1
+
+# PRODUCTION (Cloud deployed backend):
+# EXPO_PUBLIC_API_BASE_URL=https://your-backend-url.com/api/v1
 
 # API Key - Must match the backend configuration
 # Default backend key: your-custom-secret-key-here
@@ -15,7 +23,10 @@ EXPO_PUBLIC_API_KEY=your-custom-secret-key-here
 EXPO_PUBLIC_API_TIMEOUT=10000
 
 # Notes:
-# 1. When testing on a physical device via Expo Go, replace localhost with your computer's IP
-# 2. Ensure the backend server is running before starting the app
-# 3. For Android emulator, use 10.0.2.2 instead of localhost
-# 4. For iOS simulator, localhost works fine
+# 1. For APK builds: MUST use computer's IP or deployed URL (localhost won't work)
+# 2. For Expo Go testing: Replace localhost with your computer's IP address
+# 3. Ensure your phone and computer are on the SAME WiFi network
+# 4. Ensure the backend server is running before starting the app
+# 5. For Android emulator, use 10.0.2.2 instead of localhost
+# 6. For iOS simulator, localhost works fine
+# 7. After changing this file, rebuild your APK for changes to take effect
