--- a/project/app.json
+++ b/project/app.json
@@ -16,9 +16,22 @@
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-web-browser"
+    ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "ea1dd32a-42a5-4d19-98e1-f15e5cb0299e"
+      }
+    },
+    "android": {
+      "package": "com.deepangokul.boltexponativewind"
     }
   }
 }
